--- a/cars.html
+++ b/cars.html
@@ -21,10 +21,11 @@
                 <ul>
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="service.html">SERVICE</a></li>
-                    <li><a href="newcars.html">NEW CARS</a></li>
+                    <li><a href="cars.html">CARS</a></li>
                     <li><a href="secondhand.html">SECOND HAND</a></li>
                     <li><a href="carreview.html">CAR REVIEW</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
+                    <li><a href="shoppinglist"><i class="fa-solid fa-cart-shopping"></i></a></li>
                 </ul>
             </div>
             <!----<i class="fa fa-bars" onclick="showMenu()"></i>---->
