--- a/index.html
+++ b/index.html
@@ -54,18 +54,18 @@
         <div class="row">
             <div class="newcar">
                 <img src="pics/photo_2024-05-16_12-47-13.jpg" >
-                <h3>Audi Q3</h3>
-                <p>6,112,997tk - 7,320,433tk</p>
+                <h3>Toyota Aqua</h3>
+                <p>6,11,970tk - 7,32,433tk</p>
             </div>
             <div class="newcar">
                 <img src="pics/photo_2024-05-16_12-47-22.jpg" >
-                <h3>Mercedes Benz</h3>
-                <p>8,000,000tk - 9,000,000tk</p>
+                <h3>Toyota Prius</h3>
+                <p>8,040,00tk - 9,100,00tk</p>
             </div>
             <div class="newcar">
                 <img src="pics/photo_2024-05-16_12-47-28.jpg" >
-                <h3>Mercedes Benz</h3>
-                <p>8,000,000tk - 9,000,000tk</p>
+                <h3>Toyota Fitz</h3>
+                <p>8,000,00tk - 9,000,00tk</p>
             </div>
         </div>
     </section>
