--- a/about.html
+++ b/about.html
@@ -47,7 +47,14 @@
     </script>
 
  <section class="us">
-    <div>
+    <h2>About Us</h2>
+    <div class="about">
+        <div class="box2">
+        <p>BD Motors is your trusted partner for new and used cars, offering a wide range of vehicles and exceptional customer service.</p>
+        </div>
+        <div class="box1">
+            <img src="pics/cover1.jpg">
+        </div>
 
         
     </div>
