--- a/about.html
+++ b/about.html
@@ -21,8 +21,8 @@
                 <ul>
                     <li><a href="incex.html">HOME</a></li>
                     <li><a href="service.html">SERVICE</a></li>
-                    <li><a href="newcars.html">NEW CARS</a></li>
-                    <li><a href="secondhand.html">SECOND HAND</a></li>
+                    <li><a href="about.html">ABOUT</a></li>
+                    <li><a href="cars.html">CARS</a></li>
                     <li><a href="carreview.html">CAR REVIEW</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
                 </ul>
