--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
             <div class="nav-link" id="navLink">
                 <!----<i class="fa fa-times" onclick="hideMenu()"></i>---->
                 <ul>
-                    <li><a href="incex.html">HOME</a></li>
+                    <li><a href="index.html">HOME</a></li>
                     <li><a href="service.html">SERVICE</a></li>
                     <li><a href="about.html">ABOUT</a></li>
                     <li><a href="cars.html">CARS</a></li>
@@ -48,7 +48,7 @@
 
  <section class="us">
     <h2>About Us</h2>
-    <div class="about">
+    <div class="about1">
         <div class="box2">
         <p>BD Motors is your trusted partner for new and used cars, offering a wide range of vehicles and exceptional customer service.</p>
         </div>
