--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@
                 <ul>
                     <li><a href="home.html">Home</a></li>
                     <li><a href="service.html">Service</a></li>
-                    <li><a href="newcars.html">New Cars</a></li>
-                    <li><a href="secondhand.html">Second Hand</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="cars.html">Cars</a></li>
                     <li><a href="carreview.html">Car Review</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
