--- a/shoppinglist.html
+++ b/shoppinglist.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.2/css/all.min.css">
 </head>
 <body>
-    <section class="header">
+    <section class="header1">
         <nav>
             <a href="index.html"><i class="fas fa-car logo"> <h5>BD Motors</h5></i></a>
             <div class="nav-link" id="navLink">
@@ -21,7 +21,7 @@
                 <ul>
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="service.html">SERVICE</a></li>
-                    <li><a href="newcars.html">NEW CARS</a></li>
+                    <li><a href="about.html">ABOUT</a></li>
                     <li><a href="cars.html">CARS</a></li>
                     <li><a href="carreview.html">CAR REVIEW</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
@@ -117,4 +117,3 @@
     </script>
        
 </body>
-</html>
