--- a/shoppinglist.html
+++ b/shoppinglist.html
@@ -27,7 +27,7 @@
                     <li><a href="contact.html">CONTACT</a></li>
                 </ul>
             </div>
-            <i class="fa fa-bars" onclick="showMenu()"></i>
+           <!---- <i class="fa fa-bars" onclick="showMenu()"></i>---->
         </nav>
         <div class="text-box">
             <h1>New Journey</h1>
