--- a/cars.html
+++ b/cars.html
@@ -31,7 +31,7 @@
             <!----<i class="fa fa-bars" onclick="showMenu()"></i>---->
         </nav>
         <div class="text-box">
-            <h1>Find your right </h1>
+            <h1>Start Your Journey with BDMotors </h1>
            
             
         </div>
